Næ að fetch úr database, ennþa i vinnslu

--- a/bookroom/Base.lproj/Main.storyboard
+++ b/bookroom/Base.lproj/Main.storyboard
@@ -476,6 +476,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="jgF-t2-7Y5"/>
+        <segue reference="VaL-oZ-sCm"/>
     </inferredMetricsTieBreakers>
 </document>
